welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmile
	if (asmile==true && bsmile==false){
            ^monkeyTrouble:5: error: not found: value bsmile
	else if (bsmile==true && asmile==false) {
                 ^