welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (asmile==true && bsmile==false){
		return true
	}
	else if (bsmile==true && asmile==false) {
		return true
	}
	else{
		return false
	}
}
